--- a/Class 12/package.json
+++ b/Class 12/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "class-11",
+  "name": "class-12",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/inquirer": "^9.0.3",
-    "chalk": "^5.3.0",
-    "inquirer": "^9.2.11"
-  }
+  "license": "ISC"
 }
